# Wireguard-tools.js

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mocharc.yml  .npmignore  CMakeLists.txt  LICENSE  README.md  asyncExample.cpp  binding.gyp  binding.yaml  compile_flags.txt  customTest.ts  go.mod  go.sum  index.mjs  install.js  jsconfig.json  main.go  package-lock.json  package.json  testPackage.test.cjs  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.gitea/workflows/: test.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  devconatinerTest.yml  publish.yml  publishNpm.yml  test.yaml  test.yml  testProject.yml
.zed/: settings.json
addon/: addon.go  binding.cc  createInterface.cc  linux.go  main.cpp  unix.go  wg.hh  wginterface.hh  windows.go
addon/genKey/: wgkeys.cpp  wgkeys.hh
addon/linux/: wginterface.cpp  wireguard.c
addon/userspace/: ipc.cpp  wginterface.cpp
addon/userspace/go/: go.mod  go.sum  main.go  main_unix.go  main_windows.go
addon/wgEmbed/: wireguard.c
addon/win/: wginterface.cpp
addons/genKey/: key_gen.cpp  wgkeys.cpp  wgkeys.hh
addons/tools/: wginterface-dummy.cpp  wginterface-linux.cpp  wginterface-win.cpp  wginterface-win32.cpp  wginterface.cpp  wginterface.hh  wginterface_darwin.cpp  wginterface_linux.cpp
addons/tools/linux/: set_ip.cpp
addons/tools/win/: ipc.cpp  set_ip.cpp  shared.cpp  wireguard2.h
configsExamples/: wg0.ini  wg1.ini
docs/examples/: index.mjs
examples/addPeer/: index.mjs  package.json
libs/: build.mjs  http.mjs  prebuildifyLoad.cjs
patchs/: android_libnl.patch
scripts/: build.mjs
src/: addons.ts  bridge.test.ts  bridge.ts  index.cjs  index.mjs  index.ts  index_test.ts  interfaces.test.ts  key.ts  key_test.ts  maneger.ts  mergeSets.ts  quick.ts  quick_test.ts  userspace.ts  utils.test.ts  wg_binding.ts  wginterface.d.ts  wginterface.js  wginterface.test.mjs  wginterface.test.ts  wginterface.ts  wginterface_test.ts
src/addon/: add_device.cpp  add_new_device.cc  binding.cc  binding.cpp  key_gen.cpp  key_maneger.c  key_maneger.h  parse_device.cc  set_address.cc  set_route.cc  wg_interface.cpp  wginterface.cpp  wginterface.hh  wginterface_darwin.cpp  wginterface_win32.cpp
src/addon/linux/: wireguard.cpp
src/addon/wg/src/: config.c  config.h  encoding.c  encoding.h  show.c
src/addon/wgEmbed/: README.md
src/exec/wg/: getStatus.ts  index.ts  updateInterface.ts
src/exec/wg_quick/: exec.ts  index.ts  up.ts
src/experimental/: key.ts  key_test.ts
src/lib/: childPromise.ts  commandExists.ts  node-cidr.ts  nodeCidr4.ts  nodeCidr6.ts  parseConfig.ts
src/netlink/: defines.ts  index.ts  netlink.test.ts
src/utils/: config.d.ts  config.js  config.test.mjs  config.test.ts  config.ts  index.js  index.ts  ipManeger.test.ts  ipManeger.ts  ipm.d.ts  ipm.js  ipm.test.mjs  ipm.test.ts  ipm.ts  keygen.d.ts  keygen.js  keygen.test.mjs  keygen.test.ts  keygen.ts
src/wg/: genKey.ts  getConfig.ts  getStatus.ts  index.ts  updateInterface.ts
src/wg_quick/: index.ts  up.ts  writeConfig.ts
tests/: bridge.ts  interfaces.ts  utils.cjs  utils.js  utils.ts  wg_binding.cjs  wg_binding.js  wg_binding.ts
wg_addon/: addon.go  unix.go  wgctrl.go
